--- a/project1-toronto.ipynb
+++ b/project1-toronto.ipynb
@@ -743,6 +743,383 @@
    "source": [
     "df_grouped.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Libraries imported\n"
+     ]
+    }
+   ],
+   "source": [
+    "%matplotlib inline\n",
+    "import geocoder\n",
+    "import requests\n",
+    "from pandas.io.json import json_normalize\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "import folium\n",
+    "print('Libraries imported')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting Latitude and Longitude of the neighborhoods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2019-10-16 22:55:38--  https://cocl.us/Geospatial_data\n",
+      "Resolving cocl.us (cocl.us)... 161.202.50.39\n",
+      "Connecting to cocl.us (cocl.us)|161.202.50.39|:443... connected.\n",
+      "HTTP request sent, awaiting response... 301 Moved Permanently\n",
+      "Location: https://ibm.box.com/shared/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv [following]\n",
+      "--2019-10-16 22:55:41--  https://ibm.box.com/shared/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv\n",
+      "Resolving ibm.box.com (ibm.box.com)... 103.116.4.197\n",
+      "Connecting to ibm.box.com (ibm.box.com)|103.116.4.197|:443... connected.\n",
+      "HTTP request sent, awaiting response... 301 Moved Permanently\n",
+      "Location: /public/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv [following]\n",
+      "--2019-10-16 22:55:42--  https://ibm.box.com/public/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv\n",
+      "Reusing existing connection to ibm.box.com:443.\n",
+      "HTTP request sent, awaiting response... 301 Moved Permanently\n",
+      "Location: https://ibm.ent.box.com/public/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv [following]\n",
+      "--2019-10-16 22:55:42--  https://ibm.ent.box.com/public/static/9afzr83pps4pwf2smjjcf1y5mvgb18rr.csv\n",
+      "Resolving ibm.ent.box.com (ibm.ent.box.com)... 103.116.4.211\n",
+      "Connecting to ibm.ent.box.com (ibm.ent.box.com)|103.116.4.211|:443... connected.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://public.boxcloud.com/d/1/b1!pl184Qzhp7edb1mzL302gSPy7hOJQrK7NcbGli9RFgdqWjVWfFYMEHS7pZv98_Nu-h-w3OrrqpVCIxZeBFvj3U0Wh9j5yUnBnPcSg4dY9YfGe7anoQ-PeTDxuRp4eq_m4JjzXiYGc4dbzJvEm7lFhigZojd74ZGf20aAP5aEf1joEQg47C_H_pqmDZvfFOjIBt_Rx36OfksceJci65WsCIdXWD-FT3t5ZTKvTe2K5OPyIiyKjrXFG_ZtygcU0SdcIMJfgBq0uRbG4_OEVp07Iitosd61k5bFebzLt_AH8ZHIQLNjI3xMAXEJyOd8ixtwXUfkNi0kjJBmYjOcj_OffLRjydus66QfjRMtccI2tnI8VOgpv7636SGo7cXO56CR3Sx-EItxlSeYZ4xd6-PbMlvsYLOGFvBDUCO03wi-iyZN2bsQZifOgMaEkhpbKoyKK8sQzbFKHPgBv_02hFICSFgaW8RsTIWvMxn_gIMmCn8qHg7Upp_5vxoDdSTSNVzlA-sM21TNkxV5-taUu7bIpVI-7-EXEtRyIBmDs7XpCewJOiTkpWMKLaA_DnVUlnDVgcclpJYDlxDIv_p2I1QolPucjb8XflCm8vNv8U-k8OZVveS6WTJRy-Of9W0MMAkR8Z4J0Thhqfnplu_GMEwwQDknGIhegHk7vt_wIy8FemyJoM_0fLlEYfNJ_WsYx1bOZ7X5jacyUvnBSDP3CHDROEfGKETgIbI4WClK26jPLjJQtY7D1Hfppmljcfz0kJbxJ8u1nJOUGNYu-kP_foqNILIf9BzcRqECree_2jlU5fET-ozQJ6qnGJrznwex1wixKEa31SqE-PKjPcEcQdxzTb1LJ-vO8xNEmjmTmRfVZ8aIpYES0P_jqlB9VLwXvMSlE83W8U8qU0hz_dKo_4n3IXLIf7UL-eLz4FLIsdj7QZDYxQPT9YgDH1Tdy6t8CputDO37m33_pLii8IdTAge2kA5Sc0Cw5XwmZjnVxpPrzjZ9G7hmpW128mMddGjNANgpMvzvswtNAP-ahJUHxllmHjNO6Na6o9v2P3FFGVi1awKMT_t3SwhZoMkOVQTL8HZEWikRiojBCeS22qTKIlPbA9lFom97oBe3m8aOWN3zoj-NiLhNku1Qkk4rrIHk0w__gZVTzO83k-RiIyQgs_gIQOE-32Qx9-sK4W-gVE4alHjSjQ4MRQa43edL1jPOQxkyKJJdhplCfM9SoNz1jNWnJ0_1FGx-rwKPXH08tAtSHbH_PPik7520hKPA-IHjR5sAVrSFTsqKiUEc3smNDnCuBFKxNzJJHZXFRWb6AZT2IyMmN70SwDOJIFXrb4XGDbV5pr2Q1qX4mxaltPqE3VkiWwb4HrJLaUEGzf1w_SLM2BcLNSZovRDLZ4ndHO7y/download [following]\n",
+      "--2019-10-16 22:55:44--  https://public.boxcloud.com/d/1/b1!pl184Qzhp7edb1mzL302gSPy7hOJQrK7NcbGli9RFgdqWjVWfFYMEHS7pZv98_Nu-h-w3OrrqpVCIxZeBFvj3U0Wh9j5yUnBnPcSg4dY9YfGe7anoQ-PeTDxuRp4eq_m4JjzXiYGc4dbzJvEm7lFhigZojd74ZGf20aAP5aEf1joEQg47C_H_pqmDZvfFOjIBt_Rx36OfksceJci65WsCIdXWD-FT3t5ZTKvTe2K5OPyIiyKjrXFG_ZtygcU0SdcIMJfgBq0uRbG4_OEVp07Iitosd61k5bFebzLt_AH8ZHIQLNjI3xMAXEJyOd8ixtwXUfkNi0kjJBmYjOcj_OffLRjydus66QfjRMtccI2tnI8VOgpv7636SGo7cXO56CR3Sx-EItxlSeYZ4xd6-PbMlvsYLOGFvBDUCO03wi-iyZN2bsQZifOgMaEkhpbKoyKK8sQzbFKHPgBv_02hFICSFgaW8RsTIWvMxn_gIMmCn8qHg7Upp_5vxoDdSTSNVzlA-sM21TNkxV5-taUu7bIpVI-7-EXEtRyIBmDs7XpCewJOiTkpWMKLaA_DnVUlnDVgcclpJYDlxDIv_p2I1QolPucjb8XflCm8vNv8U-k8OZVveS6WTJRy-Of9W0MMAkR8Z4J0Thhqfnplu_GMEwwQDknGIhegHk7vt_wIy8FemyJoM_0fLlEYfNJ_WsYx1bOZ7X5jacyUvnBSDP3CHDROEfGKETgIbI4WClK26jPLjJQtY7D1Hfppmljcfz0kJbxJ8u1nJOUGNYu-kP_foqNILIf9BzcRqECree_2jlU5fET-ozQJ6qnGJrznwex1wixKEa31SqE-PKjPcEcQdxzTb1LJ-vO8xNEmjmTmRfVZ8aIpYES0P_jqlB9VLwXvMSlE83W8U8qU0hz_dKo_4n3IXLIf7UL-eLz4FLIsdj7QZDYxQPT9YgDH1Tdy6t8CputDO37m33_pLii8IdTAge2kA5Sc0Cw5XwmZjnVxpPrzjZ9G7hmpW128mMddGjNANgpMvzvswtNAP-ahJUHxllmHjNO6Na6o9v2P3FFGVi1awKMT_t3SwhZoMkOVQTL8HZEWikRiojBCeS22qTKIlPbA9lFom97oBe3m8aOWN3zoj-NiLhNku1Qkk4rrIHk0w__gZVTzO83k-RiIyQgs_gIQOE-32Qx9-sK4W-gVE4alHjSjQ4MRQa43edL1jPOQxkyKJJdhplCfM9SoNz1jNWnJ0_1FGx-rwKPXH08tAtSHbH_PPik7520hKPA-IHjR5sAVrSFTsqKiUEc3smNDnCuBFKxNzJJHZXFRWb6AZT2IyMmN70SwDOJIFXrb4XGDbV5pr2Q1qX4mxaltPqE3VkiWwb4HrJLaUEGzf1w_SLM2BcLNSZovRDLZ4ndHO7y/download\n",
+      "Resolving public.boxcloud.com (public.boxcloud.com)... 103.116.4.200\n",
+      "Connecting to public.boxcloud.com (public.boxcloud.com)|103.116.4.200|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 2891 (2.8K) [text/csv]\n",
+      "Saving to: ‘toronto_coordinates.csv’\n",
+      "\n",
+      "toronto_coordinates 100%[===================>]   2.82K  --.-KB/s    in 0s      \n",
+      "\n",
+      "2019-10-16 22:55:45 (157 MB/s) - ‘toronto_coordinates.csv’ saved [2891/2891]\n",
+      "\n",
+      "Coordinates downloaded!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#downloading dataset from link provided in the course\n",
+    "!wget -O 'toronto_coordinates.csv' https://cocl.us/Geospatial_data\n",
+    "print('Coordinates downloaded!')\n",
+    "coors = pd.read_csv('toronto_coordinates.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M1C</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M1E</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M1G</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M1H</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postal Code   Latitude  Longitude\n",
+       "0         M1B  43.806686 -79.194353\n",
+       "1         M1C  43.784535 -79.160497\n",
+       "2         M1E  43.763573 -79.188711\n",
+       "3         M1G  43.770992 -79.216917\n",
+       "4         M1H  43.773136 -79.239476"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coors.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PostalCode</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M1C</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M1E</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M1G</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M1H</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  PostalCode   Latitude  Longitude\n",
+       "0        M1B  43.806686 -79.194353\n",
+       "1        M1C  43.784535 -79.160497\n",
+       "2        M1E  43.763573 -79.188711\n",
+       "3        M1G  43.770992 -79.216917\n",
+       "4        M1H  43.773136 -79.239476"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#renaming column names\n",
+    "coors.columns=['PostalCode','Latitude','Longitude']\n",
+    "coors.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PostalCode</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Rouge,Malvern</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M1C</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Highland Creek,Rouge Hill,Port Union</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M1E</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Guildwood,Morningside,West Hill</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M1G</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Woburn</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M1H</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Cedarbrae</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  PostalCode      Borough                          Neighborhood   Latitude  \\\n",
+       "0        M1B  Scarborough                         Rouge,Malvern  43.806686   \n",
+       "1        M1C  Scarborough  Highland Creek,Rouge Hill,Port Union  43.784535   \n",
+       "2        M1E  Scarborough       Guildwood,Morningside,West Hill  43.763573   \n",
+       "3        M1G  Scarborough                                Woburn  43.770992   \n",
+       "4        M1H  Scarborough                             Cedarbrae  43.773136   \n",
+       "\n",
+       "   Longitude  \n",
+       "0 -79.194353  \n",
+       "1 -79.160497  \n",
+       "2 -79.188711  \n",
+       "3 -79.216917  \n",
+       "4 -79.239476  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#merging two dataframes into one dataframe\n",
+    "toronto_df_cord=pd.merge(df_grouped,coors,on='PostalCode')\n",
+    "toronto_df_cord.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
